--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,6 @@
-*,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
+	letter-spacing: 0.5px;
 }
