--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
 body {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 1rem;
-	line-height: 1.5;
-	letter-spacing: 0.5px;
+	letter-spacing: 0.4px;
+	overflow-x: hidden;
+}
+button {
+	background-color: transparent;
+	border: 1px solid rgba(209, 213, 219, 1);
+	border-radius: 0.25rem;
+	padding: 0.25rem 0.75rem;
+	margin-top: 0.25rem;
+	transition: all 0.2s ease;
+}
+button:hover {
+	background-color: rgba(34, 34, 34, 1);
+	border-color: rgba(34, 34, 34, 1);
+	color: #fff;
+}
+button:focus,
+input:focus {
+	outline: 0;
+	box-shadow: 0 0 0px 3px rgba(50, 50, 50, 0.4);
 }
